# StockPrediction

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  deploy.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  render.yaml  stock-prediction.hcl
.github/workflows/: ci.yml
.streamlit/: config.toml
agent/: __init__.py  a3c.py  base.py  vac.py
components/: __init__.py  analysis.py  config.py  overview.py  results.py  sidebar.py  tools.py  top_stocks.py  training.py
envs/: stock_env.py
scripts/: run_tests.py
tests/: __init__.py  conftest.py
tests/components/: test_config.py  test_overview.py  test_sidebar.py  test_training_component.py
tests/envs/: __init__.py  test_stock_env.py
tests/trainers/: __init__.py  test_trainer.py
tests/utils/: test_evaluation.py  test_parameters.py  test_training.py  test_web.py
trainers/: trainer.py
utils/: __init__.py  evaluation.py  parameters.py  training.py  web.py
