[project]
name = "vac"
version = "0.1.0"
description = "Vanilla Actor-Critic Stock Prediction Application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.28.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
]
